--- a/day_12/part_2.html
+++ b/day_12/part_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Day 12, part 1</title>
+    <title>Day 12, part 2</title>
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
@@ -39,6 +39,14 @@
                 ></td>
             </tr>
         </table>
+        <form
+            @submit.prevent="handleSubmit"
+        >
+            <textarea
+                v-model="text"
+            ></textarea>
+            <input type="submit" />
+        </form>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./part_2.js"></script>
